@@ -1,0 +1,2 @@
+Source: foo
+Maintainer: Jelmer Vernooĳ <jelmer@debian.org>
