@@ -1,0 +1,2 @@
+DEBEMAIL=joe@example.com
+DEBFULLNAME=Joe
