@@ -1,0 +1,2 @@
+Source: foo
+Maintainer: Joe <joe@example.com>
